--- a/des157-wi20/process/research/styles.css
+++ b/des157-wi20/process/research/styles.css
@@ -19,7 +19,9 @@ p{
   padding-right: 10%;
   font-family: 'Heebo', sans-serif;
   font-weight: 400;
-  font-size: 1.3em;
+  font-size: 1.1em;
+  line-height: 1.4em;
+
 }
 footer{
   padding-left: 10%;
@@ -28,4 +30,10 @@ footer{
   font-weight: 400;
   text-align: center;
   font-size: 1em;
+}
+h2{
+  font-size: 1.7rem;
+  font-family: 'Heebo', sans-serif;
+  font-weight: 700;
+  text-align: center;
 }
